<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_common_secodary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/common_text_color_ffffff"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/common_interval"
            android:paddingRight="@dimen/common_interval"
            android:src="@drawable/back_blue" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingRight="@dimen/activity_table_layout_margin_20dp"
            android:text="@string/pop_window_statistics"
            android:textColor="@color/tv_text_blue"
            android:textSize="18.7sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/title_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_interval"
            android:paddingRight="@dimen/common_interval"
            android:text="刷新"
            android:textColor="@color/tv_text_blue"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_universal_spacing_37"
        android:background="@color/layout_bg_white_ffffff"
        android:orientation="horizontal">

        <android.support.v4.widget.Space
            android:layout_width="@dimen/layout_universal_spacing_12"
            android:layout_height="match_parent" />

        <TextView
            style="@style/style_queue_statistic_text"
            android:layout_weight="2"
            android:text="@string/queue_statistic_queue_text" />

        <TextView
            style="@style/style_queue_statistic_text"
            android:layout_weight="2"
            android:text="@string/queue_statistic_fetch_number_text" />

        <TextView
            style="@style/style_queue_statistic_text"
            android:layout_weight="2"
            android:text="@string/queue_statistic_eat_number_text" />

        <TextView
            style="@style/style_queue_statistic_text"
            android:layout_weight="2"
            android:gravity="center_vertical|right"
            android:text="@string/queue_statistic_average_wait_number_text" />

        <android.support.v4.widget.Space
            android:layout_width="@dimen/layout_universal_spacing_12"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include layout="@layout/divider_horizontal" />

    <com.kennyc.view.MultiStateView
        android:id="@+id/msv_context"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:msv_emptyView="@layout/state_empty_view"
        app:msv_errorView="@layout/state_error_view">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_context"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.kennyc.view.MultiStateView>

    <LinearLayout
        android:id="@+id/ll_check_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_universal_spacing_56"
        android:background="@drawable/selector_button_blue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_check_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tv_text_white_ffffff"
            android:textSize="@dimen/tv_text_size_23"
            android:drawablePadding="@dimen/layout_universal_spacing_8"
            android:drawableRight="@drawable/people_select_down_white"
            tools:text="2018-03-25" />
    </LinearLayout>

</LinearLayout>